Replace Jarno -> Minttu notifier

--- a/internal/mail/templates/notify-minttu.html
+++ b/internal/mail/templates/notify-minttu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body style="font-family: Arial, sans-serif; line-height: 1.6; color: #333;">
-    <p>Dear Jarno,</p>
+    <p>Dear Minttu,</p>
 
     <p>
       We are pleased to inform you that the ingestion of the following dataset has been successfully completed.
